13-04-2022 sau khi xuất danh sách, mở file ngay lập tức

--- a/app/src/main/res/menu/menu_home_sidebar.xml
+++ b/app/src/main/res/menu/menu_home_sidebar.xml
@@ -27,9 +27,9 @@
         android:title="@string/menuStatistics"
         app:showAsAction="ifRoom|withText"/>
 
-    <item android:id="@+id/account"
+    <item android:id="@+id/settings"
         android:icon="@drawable/menu_account"
-        android:title="@string/menuAccount"
+        android:title="@string/menuSettings"
         app:showAsAction="never|withText"/>
 
     <item android:id="@+id/signout"
