--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -67,4 +67,16 @@
         <item name="android:layout_marginStart">50dp</item>
         <item name="android:layout_marginTop">20dp</item>
     </style>
+
+    <style name="setting_account_linear_layout_style">
+        <item name="android:clickable">true</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="setting_account_text_view_style">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
