--- a/app/src/main/res/layout/activity_subject.xml
+++ b/app/src/main/res/layout/activity_subject.xml
@@ -9,14 +9,14 @@
         tools:context=".Subject.SubjectActivity">
 
         <!--Linear Layout Avatar & Home shortcut -->
-<!--        <fragment-->
-<!--            android:id="@+id/topBar"-->
-<!--            class="com.example.stdmanager.TopBarHomeIconFragment"-->
-<!--            tools:layout="@layout/fragment_top_bar_home_icon"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_width="wrap_content">-->
-<!--        </fragment>-->
-        <!--End Linear Layout Avatar & Home shortcut -->
+        <fragment
+            android:id="@+id/topBar"
+            class="com.example.stdmanager.TopBarHomeIconFragment"
+            tools:layout="@layout/fragment_top_bar_home_icon"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content">
+        </fragment>
+<!--        End Linear Layout Avatar & Home shortcut -->
 
 
         <!-- Subject Table -->
