--- a/app/src/main/res/layout/activity_settings_account.xml
+++ b/app/src/main/res/layout/activity_settings_account.xml
@@ -11,11 +11,25 @@
 
 
         <ImageView
+            android:id="@+id/settingsAccountImageViewAvatar"
             android:layout_marginTop="20dp"
             android:layout_gravity="center"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:background="@drawable/avatar4" />
+            android:background="@drawable/avatar" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="12dp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/settingsAccountButtonChangeAvatar"
+            style="@style/button_style"
+            android:layout_width="200dp"
+            android:layout_height="30sp"
+            android:background="@drawable/button_background_2"
+            android:text="@string/ChangeAvatar" />
 
         <Space
             android:layout_width="match_parent"
@@ -31,17 +45,18 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:paddingStart="20dp"
-                    android:text="@string/familyName"
+                    android:text="@string/fullName"
                     android:textStyle="bold"
                     tools:ignore="RtlSymmetry"
                     style="@style/setting_account_text_view_style" />
 
                 <TextView
+                    android:id="@+id/settingsAccountTextViewName"
                     style="@style/setting_account_text_view_style"
                     android:layout_width="0dp"
-                    android:layout_weight="2"
+                    android:layout_weight="1"
                     android:gravity="right"
-                    android:text="@string/teacherName"
+                    android:text=""
                     tools:ignore="RtlHardcoded,RtlSymmetry" />
 
                 <ImageView
