--- a/app/src/main/res/layout/activity_settings_account_edit_password.xml
+++ b/app/src/main/res/layout/activity_settings_account_edit_password.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/screen"
     tools:context=".LoginActivity">
 
     <LinearLayout
@@ -13,34 +12,15 @@
         android:layout_alignParentBottom="true"
         android:background="@drawable/rectangle_6"
         android:orientation="vertical"
-        android:padding="30dp">
+        android:padding="30dp"
+        tools:ignore="ObsoleteLayoutParam,UselessParent">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/welcome"
+            android:text="@string/password"
             android:textColor="@color/black"
-            android:textSize="40dp" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="40dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/username"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
-
-        <EditText
-            android:id="@+id/txtUsername"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="1"
-            android:hint="@string/username"
-            android:textColor="@color/black" />
+            android:textSize="40sp" />
 
         <Space
             android:layout_width="match_parent"
@@ -50,17 +30,35 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/password"
+            android:text="@string/enter_former_password"
             android:textColor="@color/black"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <EditText
-
-            android:id="@+id/txtPassword"
+            android:id="@+id/settingsAccountPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/password"
-            android:text="123456"
+            android:hint="@string/enter_former_password"
+            android:inputType="textPassword"
+            android:textColor="@color/black" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="10dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/enter_new_password"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/settingsAccountNewPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/enter_new_password"
             android:inputType="textPassword"
             android:textColor="@color/black" />
 
@@ -69,40 +67,30 @@
             android:layout_height="wrap_content"
             android:minHeight="20dp" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnSignIn"
-            style="@style/button_primary_style"
-            android:text="@string/action_sign_in" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="20dp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/black" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="20dp" />
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/action_register_long"
-            android:textAlignment="center"
+            android:text="@string/enter_confirmation_password"
             android:textColor="@color/black"
+            android:textSize="20sp" />
 
-            android:textSize="15dp"
-            android:textStyle="italic" />
+        <EditText
+            android:id="@+id/settingsAccountConfirmationPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/enter_confirmation_password"
+            android:inputType="textPassword"
+            android:textColor="@color/black" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="20sp" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnRegister"
-            style="@style/button_secondary_style"
-            android:text="@string/action_register" />
-
+            android:background="@drawable/button_background_3"
+            android:id="@+id/settingsAccountButtonSavePassword"
+            style="@style/button_primary_style"
+            android:text="@string/Save" />
     </LinearLayout>
-</RelativeLayout>
+</FrameLayout>
