--- a/app/src/main/res/layout/fragment_top_bar_home_icon.xml
+++ b/app/src/main/res/layout/fragment_top_bar_home_icon.xml
@@ -11,7 +11,8 @@ tools:context=".TopBarHomeIconFragment">
 <ImageView
     android:layout_width="70dp"
     android:layout_height="70dp"
-    android:background="@drawable/avatar" />
+    android:background="@drawable/avatar"
+    tools:ignore="ContentDescription" />
 
 <RelativeLayout
     android:layout_width="match_parent"
@@ -22,25 +23,25 @@ tools:context=".TopBarHomeIconFragment">
         android:id="@+id/info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/txtNameGV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Nguyễn Thị Thuỷ"
+            android:text="@string/teacherName"
             android:textColor="@color/white"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtIDGV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Mã GV: 1"
+            android:text="@string/teacherId"
             android:textColor="#B9B9B9"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="italic" />
     </LinearLayout>
 
@@ -48,9 +49,10 @@ tools:context=".TopBarHomeIconFragment">
         android:id="@+id/btnHome"
         android:layout_width="37dp"
         android:layout_height="35dp"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/home" />
+        android:background="@drawable/home"
+        tools:ignore="ContentDescription" />
 </RelativeLayout>
 
 </LinearLayout>
