15-04-2022 thêm chế độ dark mode & đăng xuất tài khoản

--- a/app/src/main/res/drawable/rectangle_6.xml
+++ b/app/src/main/res/drawable/rectangle_6.xml
@@ -15,7 +15,7 @@
 
         <path
             android:pathData="M0 0V684H428V0"
-            android:fillColor="#FFFFFF" />
+            android:fillColor="@color/mainBackground" />
 
     </group>
 
