--- a/app/src/main/res/layout/activity_classroom_individual.xml
+++ b/app/src/main/res/layout/activity_classroom_individual.xml
@@ -38,6 +38,8 @@
 
                 <TextView
                     style="@style/classroom_individual_textview_style"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/familyName" />
 
                 <TextView
