--- a/app/src/main/res/layout/activity_settings_account_edit_password.xml
+++ b/app/src/main/res/layout/activity_settings_account_edit_password.xml
@@ -16,76 +16,54 @@
         tools:ignore="ObsoleteLayoutParam,UselessParent">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/settings_account_edit_password_text_style"
             android:text="@string/password"
-            android:textColor="@color/black"
             android:textSize="40sp" />
 
         <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="20dp" />
+            style="@style/settings_account_edit_password_text_style" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/settings_account_edit_password_text_style"
             android:text="@string/enter_former_password"
-            android:textColor="@color/black"
             android:textSize="20sp" />
 
         <EditText
             android:id="@+id/settingsAccountPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/settings_account_edit_password_text_style"
             android:hint="@string/enter_former_password"
-            android:inputType="textPassword"
-            android:textColor="@color/black" />
+            android:inputType="textPassword" />
 
         <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="10dp" />
+            style="@style/settings_account_edit_password_text_style" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/settings_account_edit_password_text_style"
             android:text="@string/enter_new_password"
-            android:textColor="@color/black"
             android:textSize="20sp" />
 
         <EditText
             android:id="@+id/settingsAccountNewPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/settings_account_edit_password_text_style"
             android:hint="@string/enter_new_password"
-            android:inputType="textPassword"
-            android:textColor="@color/black" />
+            android:inputType="textPassword" />
 
         <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="20dp" />
+            style="@style/settings_account_edit_password_text_style" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/settings_account_edit_password_text_style"
             android:text="@string/enter_confirmation_password"
-            android:textColor="@color/black"
             android:textSize="20sp" />
 
         <EditText
             android:id="@+id/settingsAccountConfirmationPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/settings_account_edit_password_text_style"
             android:hint="@string/enter_confirmation_password"
-            android:inputType="textPassword"
-            android:textColor="@color/black" />
+            android:inputType="textPassword" />
 
         <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="20sp" />
+            style="@style/settings_account_edit_password_text_style" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:background="@drawable/button_background_3"
