--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -9,10 +10,10 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="colorPrimary">#6C63FF</color>
-    <color name="colorPrimaryDark">#6C63FF</color>
+    <color name="colorPrimaryDark">#2D313D</color>
     <color name="colorAccent">#03DAC5</color>
-
-    <color name="mainText">#2D313D</color>
+    
+    <color name="mainText">#ffffff</color>
     <color name="textAlt">#8D8F97</color>
-    <color name="mainBackground">#ffffff</color>
+    <color name="mainBackground">#2D313D</color>
 </resources>
