--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,6 +56,8 @@
     </style>
 
     <style name="classroom_individual_textview_style">
+        <item name="android:textColor">@color/mainText</item>
+        <item name="android:background">@color/mainBackground</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">20sp</item>
@@ -81,6 +83,8 @@
     </style>
 
     <style name="setting_application_text_view_style">
+        <item name="android:textColor">@color/mainText</item>
+        <item name="android:background">@color/mainBackground</item>
         <item name="android:textSize">16sp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -89,10 +93,25 @@
     </style>
 
     <style name="setting_application_switch_style">
+        <item name="android:textColor">@color/mainText</item>
+        <item name="android:background">@color/mainBackground</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:checked">false</item>
         <item name="android:paddingEnd">20sp</item>
         <item name="android:switchMinWidth">50sp</item>
+    </style>
+
+    <style name="settings_account_edit_name_text_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/mainText</item>
+    </style>
+
+    <style name="settings_account_edit_password_text_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/mainText</item>
+        <item name="android:minHeight">20sp</item>
     </style>
 </resources>
