--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -24,7 +24,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/mainBackground"
         android:orientation="vertical"
         android:paddingTop="10dp">
 
@@ -33,7 +33,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white">
+            android:background="@color/mainBackground">
 
             <TextView
                 android:layout_gravity="center"
@@ -41,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="10dp"
                 android:text="@string/teacherTitleList"
+                android:textColor="@color/mainText"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -55,6 +56,7 @@
                 android:hint="@string/search"
                 android:inputType="text"
                 android:textAlignment="center"
+                android:textColor="@color/mainText"
                 android:textSize="16sp"
                 android:textStyle="italic"
                 android:autofillHints="" />
@@ -76,10 +78,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:background="#F2F2F2"
+                android:background="@color/mainBackground"
                 android:paddingTop="10dp"
                 android:text="@string/student_table_title_infomation"
-                android:textColor="@color/black" />
+                android:textColor="@color/mainText" />
             <!-- End Title Table -->
 
             <!-- List View -->
@@ -87,7 +89,7 @@
                 android:id="@+id/classroomListView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:divider="@color/black"
+                android:divider="@color/mainBackground"
                 android:dividerHeight="1sp" />
             <!-- End List View -->
 
@@ -97,6 +99,7 @@
 
         <!-- Button -->
         <LinearLayout
+            android:background="@color/mainBackground"
             android:layout_weight="0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
