--- a/app/src/main/res/layout/activity_classroom_element.xml
+++ b/app/src/main/res/layout/activity_classroom_element.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/teacherName"
-            android:textColor="@color/black"
+            android:textColor="@color/mainText"
             android:textStyle="bold" />
 
         <TextView
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/teacherClassroom"
-            android:textColor="#5D5D5D" />
+            android:textColor="@color/textAlt" />
     </LinearLayout>
 
 </LinearLayout>
