--- a/app/src/main/res/layout/activity_classroom_export.xml
+++ b/app/src/main/res/layout/activity_classroom_export.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:textColor="@color/mainText"
+    android:background="@color/mainBackground"
     android:id="@+id/classroomExportLayout"
     tools:context=".Classroom.ClassroomExportActivity">
 
@@ -21,20 +23,20 @@
         android:layout_weight="1"
         android:id="@+id/classroomTable"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:layout_height="0dp"
+        android:background="@color/mainBackground"
         android:layout_margin="10dp"
         tools:ignore="MissingConstraints">
 
         <!-- Table Heading -->
         <TableRow
-            android:background="@color/white">
+            android:background="@color/mainBackground">
 
             <TextView
                 android:layout_width="5dp"
                 android:layout_height="wrap_content"
                 android:text="@string/familyName"
-                android:textColor="@android:color/background_dark"
+                android:textColor="@color/mainText"
                 android:textSize="14sp"
                 android:layout_weight="2"
                 android:gravity="center_horizontal"
@@ -44,7 +46,7 @@
                 android:layout_width="5dp"
                 android:layout_height="wrap_content"
                 android:text="@string/firstName"
-                android:textColor="@android:color/background_dark"
+                android:textColor="@color/mainText"
                 android:padding="5sp"
                 android:textSize="14sp"
                 android:layout_weight="2"
@@ -54,7 +56,7 @@
                 android:layout_width="5dp"
                 android:layout_height="wrap_content"
                 android:text="@string/gender"
-                android:textColor="@android:color/black"
+                android:textColor="@color/mainText"
                 android:padding="5sp"
                 android:textSize="14sp"
                 android:layout_weight="2"
@@ -65,7 +67,7 @@
                 android:layout_width="5dp"
                 android:layout_height="wrap_content"
                 android:text="@string/birthday"
-                android:textColor="@android:color/black"
+                android:textColor="@color/mainText"
                 android:padding="5sp"
                 android:textSize="14sp"
                 android:layout_weight="4"
