--- a/app/src/main/res/layout/activity_classroom_update.xml
+++ b/app/src/main/res/layout/activity_classroom_update.xml
@@ -24,7 +24,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/mainBackground"
         android:orientation="vertical"
         android:paddingTop="10dp">
 
@@ -32,7 +32,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@color/mainBackground"
             android:orientation="vertical">
 
             <TextView
@@ -52,6 +52,7 @@
 
 
         <LinearLayout
+            android:background="@color/mainBackground"
             android:layout_marginTop="20dp"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="10dp"
@@ -75,6 +76,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/mainText"
                         android:text="@string/familyName"
                         android:textSize="18sp"
                         android:textStyle="bold"/>
@@ -100,6 +102,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:textColor="@color/mainText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/firstName"
@@ -130,6 +133,7 @@
 
 
                 <TextView
+                    android:textColor="@color/mainText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
@@ -145,6 +149,7 @@
                         android:id="@+id/classroomUpdateRadioButtonMale"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/mainText"
                         android:text="@string/male"/>
 
                     <RadioButton
@@ -152,6 +157,7 @@
                         android:layout_marginStart="40dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/mainText"
                         android:text="@string/female"/>
 
                 </RadioGroup>
@@ -164,6 +170,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:textColor="@color/mainText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/birthday"
