thêm quản lý điểm Xuất excel thống kê

--- a/app/src/main/res/layout/activity_gender_stats.xml
+++ b/app/src/main/res/layout/activity_gender_stats.xml
@@ -53,7 +53,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 style="@style/button_blue_style"
-                android:text="@string/classroomExportButtonPDF"
+                android:text="@string/btnExportReport"
                 android:layout_alignParentBottom="true"
                 android:id="@+id/btnExport"/>
 
