--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/screen"
     android:orientation="vertical"
-    tools:context=".Subject.SubjectActivity">
+    tools:context=".Event.EventActivity">
 
     <!--Linear Layout Avatar & Home shortcut -->
     <fragment
@@ -18,7 +18,7 @@
     <!--End Linear Layout Avatar & Home shortcut -->
 
 
-    <!-- Student Table -->
+    <!-- Event Table -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -26,7 +26,7 @@
         android:orientation="vertical"
         android:paddingTop="10dp">
 
-        <!-- Student Classroom title & search bar -->
+        <!-- Event title & search bar -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,13 +38,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:paddingTop="10dp"
-                android:text="@string/TitleSubject"
+                android:text="@string/TitleEvent"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
 
             <EditText
-                android:id="@+id/subjectSearchBar"
+                android:id="@+id/eventSearchBar"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -57,10 +57,10 @@
                 android:textSize="16sp"
                 android:textStyle="italic" />
         </LinearLayout>
-        <!--  End Student Classroom title & search bar -->
+        <!--  End Event title & search bar -->
 
 
-        <!-- Student List -->
+        <!-- Event List -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -76,13 +76,13 @@
                 android:layout_height="40dp"
                 android:background="#F2F2F2"
                 android:paddingTop="10dp"
-                android:text="@string/SubjectTitleInformation"
+                android:text="@string/EventTitleInformation"
                 android:textColor="@color/black" />
             <!-- End Title Table -->
 
             <!-- List View -->
             <ListView
-                android:id="@+id/subjectListView"
+                android:id="@+id/eventListView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:divider="@color/black"
@@ -101,23 +101,26 @@
             android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/subjectButtonCreation"
+                android:id="@+id/eventButtonCreation"
                 style="@style/button_style"
                 android:background="@drawable/button_background_1"
-                android:text="@string/AddSubject" />
+                android:text="@string/AddEvent" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/subjectButtonExport"
+                android:id="@+id/eventButtonExport"
                 style="@style/button_style"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/button_background_2"
-                android:text="@string/ExportSubject" />
+                android:text="@string/ExportEvent" />
         </LinearLayout>
         <!-- End Button -->
 
     </LinearLayout>
-    <!-- End Student Table -->
+    <!-- End Event Table -->
 
 
 </LinearLayout>
+
+
+
