--- a/app/src/main/res/layout/activity_statistic.xml
+++ b/app/src/main/res/layout/activity_statistic.xml
@@ -10,10 +10,9 @@
     <fragment
         android:id="@+id/topBar"
         class="com.example.stdmanager.TopBarHomeIconFragment"
-        tools:layout="@layout/fragment_top_bar_home_icon"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content">
-    </fragment>
+        tools:layout="@layout/fragment_top_bar_home_icon"></fragment>
 
     <LinearLayout
         android:layout_width="match_parent"
