--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -43,19 +43,14 @@
                 android:textStyle="bold" />
 
 
-            <EditText
-                android:id="@+id/eventSearchBar"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
+            <SearchView
+                android:id="@+id/eventSearchView"
+                android:layout_width="304dp"
+                android:layout_height="34dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:autofillHints=""
-                android:background="@drawable/border"
-                android:hint="@string/search"
-                android:inputType="text"
-                android:textAlignment="center"
-                android:textSize="16sp"
-                android:textStyle="italic" />
+                android:gravity="center"
+                android:iconifiedByDefault="false"
+                android:queryHint="Tìm kiếm" />
         </LinearLayout>
         <!--  End Event title & search bar -->
 
